force-app/main/default/objects/Vonage_Meeting__c/Vonage_Meeting__c.object-meta.xml
<CustomObject>
    <label>Vonage Meeting</label>
    <nameField>
        <label>Vonage Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vonage Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>