force-app/main/default/objects/Vonage_Meeting__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Vonage Meetings</relationshipLabel>
    <relationshipName>Vonage_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>