force-app/main/default/objects/Vonage_Meeting__c/fields/Guest_URL__c.field-meta.xml
<CustomField>
    <fullName>Guest_URL__c</fullName>
    <label>Guest URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>