force-app/main/default/objects/Vonage_Meeting__c/fields/Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Meeting_ID__c</fullName>
    <label>Meeting ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>