force-app/main/default/objects/Vonage_Meeting__c/fields/Room_name__c.field-meta.xml
<CustomField>
    <fullName>Room_name__c</fullName>
    <label>Room name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>